--- a/landing_page.html
+++ b/landing_page.html
@@ -11,20 +11,20 @@
     <div class="container">
         <div class="row">
             <div class="navbar">
-                <h1>Calm</h1>
+                <h1>Anupam</h1>
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Services</a></li>
-                    <li><a href="">Blog</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
 
             </div>
             <div class="contents">
             <h1>Meet Clam, the #1 website for sleep and meditation</h1>
             <p>Join millions around the globe who are experiencing better sleep</p>
-            <a href="">Get Started</a>
+            <a href="#">Get Started</a>
         </div>
         </div>
     </div>
